--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "migrateh": "heroku run knex migrate:latest -a water-my-plants4",
-    "rollbackh": "heroku run knex migrate:rollback -a water-my-plants4",
-    "databaseh": "heroku pg:psql -a water-my-plants4",
-    "seedh": "heroku run knex seed:run -a water-my-plants4",
+    "migrateh": "heroku run knex migrate:latest -a ptct-water-my-plants4",
+    "rollbackh": "heroku run knex migrate:rollback -a ptct-water-my-plants4",
+    "databaseh": "heroku pg:psql -a ptct-water-my-plants4",
+    "seedh": "heroku run knex seed:run -a ptct-water-my-plants4",
     "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand",
     "deploy": "git push heroku main"
   },
@@ -20,10 +20,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "helmet": "4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "0.95.10",
     "knex-cleaner": "1.3.1",
     "pg": "8.7.1"
