--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "build-week-scaffolding-node",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
@@ -15,8 +15,8 @@
     "deploy": "git push heroku main"
   },
   "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
+    "node": "16.6.1",
+    "npm": "7.20.3"
   },
   "license": "ISC",
   "dependencies": {
